--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.6
   google_fonts: ^6.3.1
+  fpdart: ^1.1.1
+  supabase_flutter: ^2.10.0
+  flutter_markdown: ^0.7.7+1
+  google_sign_in: ^7.1.1
+  flutter_bloc: ^9.1.1
+  get_it: ^8.2.0
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +68,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logos/
+    - assets/images/
     - assets/google_fonts/Inter/
+    - assets/app_policy/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
